src/assets/css/responsive.css
@media (max-width: 750px) {
  body {
    font-size: 0.75rem;
  }

  main {
    display: flex;
    flex-direction: column;
  }

  .container-theme-toggle {
    width: 100%;
    display: flex;
    padding: 0;
    justify-content: flex-end;
  }

  .theme-toggle {
    position: unset;
  }

  .pokedex {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    width: 100%;
  }

  .pokemonCard .cardImage {
    width: 100%;
    height: 100%;
  }

  .pokemonCard .infoCard {
    padding: 4rem 2rem 2rem;
    margin-top: -3rem;
  }

  .pokemonCard .infoCard h3 {
    font-size: 1rem;
  }

  .pokemonList {
    max-width: 100%;
  }

  .pokemonList ul {
    display: flex;
    gap: 0.25rem;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .pokemonList .pokemon {
    width: 9.75rem;
    margin-bottom: 0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-radius: 0.5rem;
    margin-bottom: 1rem;
  }

  .pokemonList .pokemon span {
    padding-right: 0.25rem;
  }

  #sfMain {
    justify-content: space-between;
    display: flex;
  }

  #sfHeader {
    display: none;
  }
}

